fix: rename align input to alignment

--- a/libs/dh/market-participant/actors/feature-actors/src/lib/drawer/dh-actor-drawer.component.html
+++ b/libs/dh/market-participant/actors/feature-actors/src/lib/drawer/dh-actor-drawer.component.html
@@ -65,7 +65,7 @@ limitations under the License.
       <watt-drawer-content>
         <watt-tabs>
           <watt-tab [label]="t('tabs.masterData.tabLabel')">
-            <vater-stack direction="column" gap="ml" align="stretch" fill="horizontal">
+            <vater-stack direction="column" gap="ml" alignment="stretch" fill="horizontal">
               <watt-card variant="solid">
                 <watt-card-title>
                   <h3>{{ t("tabs.masterData.actor") }}</h3>
