--- a/libs/dh/market-participant/grid-areas/src/table.component.html
+++ b/libs/dh/market-participant/grid-areas/src/table.component.html
@@ -29,7 +29,7 @@ limitations under the License.
       }}</watt-button>
     </vater-stack>
 
-    <vater-stack direction="row" align="start" gap="m">
+    <vater-stack direction="row" alignment="start" gap="m">
       <watt-dropdown
         sortDirection="asc"
         dhDropdownTranslator
