--- a/libs/dh/wholesale/feature-calculations/src/lib/details/details.component.html
+++ b/libs/dh/wholesale/feature-calculations/src/lib/details/details.component.html
@@ -99,7 +99,7 @@ limitations under the License.
         </watt-progress-tracker>
       }
 
-      <vater-stack scrollable fill="vertical" align="stretch">
+      <vater-stack scrollable fill="vertical" alignment="stretch">
         @if (wholesaleAndEnergyCalculation && wholesaleAndEnergyCalculation?.gridAreas) {
           <dh-calculations-grid-areas-table [data]="wholesaleAndEnergyCalculation.gridAreas" />
         } @else if (query.error()) {
