fix(dh): use users:view permission in user management

--- a/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
+++ b/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
@@ -115,7 +115,7 @@ limitations under the License.
   </watt-nav-list>
 
   <watt-nav-list
-    *dhPermissionRequired="['users:manage']"
+    *dhPermissionRequired="['users:view']"
     [expandable]="true"
     [title]="transloco('admin.menuGroupLabel')"
   >
