fix(dh): max months validation in measurements reports

--- a/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
+++ b/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
@@ -34,6 +34,12 @@ limitations under the License.
               {{ t("selectEntireMonths") }}
             </watt-field-error>
           }
+
+          @if (form.controls.period.hasError("maxMonths")) {
+            <watt-field-error>
+              {{ t("maxMonths") }}
+            </watt-field-error>
+          }
         </watt-datepicker>
       </div>
 
