fix(dh): add deprecated routes and automatic redirects

--- a/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
+++ b/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
@@ -49,7 +49,7 @@ limitations under the License.
 
     <watt-nav-list-item
       *dhPermissionRequired="['imbalance-prices:view']"
-      [link]="getLink('imbalance-prices')"
+      [link]="getLink('imbalance-prices-deprecated')"
       >{{ transloco("imbalancePrices") }}</watt-nav-list-item
     >
 
