--- a/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
+++ b/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
@@ -49,7 +49,7 @@ limitations under the License.
 
     <watt-nav-list-item
       *dhPermissionRequired="['imbalance-prices:view']"
-      [link]="getLink('imbalance-prices')"
+      [link]="getLink('imbalance-prices-deprecated')"
       >{{ transloco("imbalancePrices") }}</watt-nav-list-item
     >
 
@@ -68,6 +68,13 @@ limitations under the License.
         >{{ transloco("reports.overview") }}</watt-nav-list-item
       >
 
+      <watt-nav-list-item
+        *dhPermissionRequired="['settlement-reports:manage', 'imbalance-prices:view']"
+        [link]="getReportsLink('settlements')"
+      >
+        {{ transloco("reports.settlements") }}
+      </watt-nav-list-item>
+
       <ng-container *dhReleaseToggle="'MISSINGDATALOG'">
         <watt-nav-list-item
           *dhPermissionRequired="['missing-measurements-log:view']"
@@ -77,6 +84,7 @@ limitations under the License.
         </watt-nav-list-item>
       </ng-container>
     </watt-nav-list>
+
     <ng-container *dhFeatureFlag="'metering-point-debug'">
       <ng-container *dhMarketRoleRequired="[EicFunction.DataHubAdministrator]">
         <watt-nav-list-item
