--- a/libs/dh/reports/feature-settlement-reports/src/components/details/details.component.html
+++ b/libs/dh/reports/feature-settlement-reports/src/components/details/details.component.html
@@ -83,7 +83,7 @@ limitations under the License.
       </watt-card>
 
       <watt-card variant="solid" class="card-grid-areas">
-        <vater-stack direction="row" gap="s" alignment="center">
+        <vater-stack direction="row" gap="s" align="center">
           <h4>{{ t("drawer.gridAreas") }}</h4>
           <span class="watt-chip-label">{{ tableSource.data.length }}</span>
         </vater-stack>
