--- a/libs/dh/reports/feature-settlement-reports/src/components/request-report/request-as-modal.component.html
+++ b/libs/dh/reports/feature-settlement-reports/src/components/request-report/request-as-modal.component.html
@@ -20,7 +20,7 @@ limitations under the License.
   *transloco="let t; read: 'reports.settlementReports.requestReportModal'"
 >
   <form id="request-as-settlement-report-form" [formGroup]="form" (ngSubmit)="submit()">
-    <vater-stack alignment="stretch" direction="column" gap="l">
+    <vater-stack align="stretch" direction="column" gap="l">
       <watt-dropdown
         [label]="t('requestAs')"
         [showResetOption]="false"
