chore(dh): adjust translations

--- a/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
+++ b/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
@@ -147,7 +147,7 @@ limitations under the License.
       ]"
       [link]="getWholesaleLink('requests-deprecated')"
     >
-      {{ transloco("wholesale.requestCalculation") }}
+      {{ transloco("wholesale.requestCalculationDeprecated") }}
     </watt-nav-list-item>
 
     <watt-nav-list-item
