--- a/libs/dh/market-participant/actors/feature-actors/src/components/table/dh-actors-table.component.html
+++ b/libs/dh/market-participant/actors/feature-actors/src/components/table/dh-actors-table.component.html
@@ -46,7 +46,7 @@ limitations under the License.
     </ng-container>
 
     <ng-container *wattTableCell="columns['status']; header: t('columns.status'); let actor">
-      <dh-actor-status-badge [status]="actor.status" />
+      <dh-market-participant-status-badge [status]="actor.status" />
     </ng-container>
   </watt-table>
 
