--- a/libs/dh/market-participant/actors/feature-organizations/src/components/details/dh-organization-details.component.html
+++ b/libs/dh/market-participant/actors/feature-organizations/src/components/details/dh-organization-details.component.html
@@ -83,7 +83,7 @@ limitations under the License.
                   {{ "marketParticipant.marketRoles." + actor.marketRole | transloco }}
                 </ng-container>
                 <ng-container *wattTableCell="actorColumns['status']; let actor">
-                  <dh-actor-status-badge [status]="actor.status" />
+                  <dh-market-participant-status-badge [status]="actor.status" />
                 </ng-container>
               </watt-table>
             </watt-card>
