--- a/libs/dh/grid-areas/src/components/grid-areas.component.html
+++ b/libs/dh/grid-areas/src/components/grid-areas.component.html
@@ -22,7 +22,7 @@ limitations under the License.
 
       <vater-spacer />
 
-      <watt-search [label]="'shared.search' | transloco" (search)="search($event)" />
+      <watt-search [label]="'shared.search' | transloco" (search)="search($event)" [trim]="true" />
 
       <watt-button icon="download" variant="text" (click)="download()">{{
         "shared.download" | transloco
