--- a/libs/dh/market-participant/actors/feature-market-roles/src/lib/dh-market-roles-overview.component.html
+++ b/libs/dh/market-participant/actors/feature-market-roles/src/lib/dh-market-roles-overview.component.html
@@ -14,43 +14,42 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<watt-card vater inset="ml" *transloco="let t; read: 'marketParticipant.marketRolesOverview'">
-  <vater-flex fill="vertical" gap="m">
-    <vater-stack direction="row" gap="s">
-      <h3>{{ t("marketRoles") }}</h3>
-      <span class="watt-chip-label">{{ dataSource.data.length }}</span>
+<watt-data-table
+  *transloco="let t; read: 'marketParticipant.marketRolesOverview'"
+  vater
+  inset="ml"
+  [ready]="true"
+  [enableSearch]="false"
+>
+  <h3>{{ t("marketRoles") }}</h3>
 
-      <vater-spacer />
+  <watt-data-actions>
+    <watt-button icon="download" variant="text" (click)="download()">{{
+      "shared.download" | transloco
+    }}</watt-button>
+  </watt-data-actions>
 
-      <watt-button icon="download" variant="text" (click)="download()">{{
-        "shared.download" | transloco
-      }}</watt-button>
-    </vater-stack>
+  <watt-table
+    [dataSource]="dataSource"
+    [columns]="columns"
+    sortBy="name"
+    sortDirection="asc"
+    [sortClear]="false"
+  >
+    <ng-container
+      *wattTableCell="columns['name']; header: t('columns.name'); let marketRoleKey"
+    >
+      {{ "marketParticipant.marketRoles." + marketRoleKey | transloco }}
+    </ng-container>
 
-    <vater-flex fill="vertical" scrollable>
-      <watt-table
-        [dataSource]="dataSource"
-        [columns]="columns"
-        sortBy="name"
-        sortDirection="asc"
-        [sortClear]="false"
-      >
-        <ng-container
-          *wattTableCell="columns['name']; header: t('columns.name'); let marketRoleKey"
-        >
-          {{ "marketParticipant.marketRoles." + marketRoleKey | transloco }}
-        </ng-container>
-
-        <ng-container
-          *wattTableCell="
-            columns['description'];
-            header: t('columns.description');
-            let marketRoleKey
-          "
-        >
-          {{ "marketParticipant.marketRoleDescriptions." + marketRoleKey | transloco }}
-        </ng-container>
-      </watt-table>
-    </vater-flex>
-  </vater-flex>
-</watt-card>
+    <ng-container
+      *wattTableCell="
+        columns['description'];
+        header: t('columns.description');
+        let marketRoleKey
+      "
+    >
+      {{ "marketParticipant.marketRoleDescriptions." + marketRoleKey | transloco }}
+    </ng-container>
+  </watt-table>
+</watt-data-table>
