fix(dh): open user admin page to "users:view" permission

--- a/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
+++ b/libs/dh/core/shell/src/lib/dh-primary-navigation.component.html
@@ -144,7 +144,7 @@ limitations under the License.
   </watt-nav-list>
 
   <watt-nav-list [title]="transloco('marketParticipant.menuGroupLabel')" [expandable]="true">
-    <watt-nav-list-item *dhPermissionRequired="['users:manage']" [link]="getLink('admin')">{{
+    <watt-nav-list-item *dhPermissionRequired="['users:view']" [link]="getLink('admin')">{{
       transloco("admin.userManagement")
     }}</watt-nav-list-item>
 
