refactor(dh, reports): replace rx-angular with signals

--- a/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
+++ b/libs/dh/reports/feature-measurements-reports/src/components/request-report/request-report-modal.component.html
@@ -49,7 +49,7 @@ limitations under the License.
           sortDirection="asc"
           [label]="t('gridArea')"
           [formControl]="form.controls.gridAreas"
-          [options]="gridAreaOptions$ | push"
+          [options]="gridAreaOptions()"
         >
           @if (multipleGridAreasSelected()) {
             <watt-field-hint>
