--- a/libs/dh/reports/feature-settlement-reports/src/components/request-report/request-report-modal.component.html
+++ b/libs/dh/reports/feature-settlement-reports/src/components/request-report/request-report-modal.component.html
@@ -43,7 +43,7 @@ limitations under the License.
           }
         </watt-datepicker>
 
-        @if (showMonthlySumCheckbox$ | push) {
+        @if (showMonthlySumCheckbox()) {
           <watt-checkbox [formControl]="form.controls.includeMonthlySum">
             {{ t("includeMonthlySum") }}
           </watt-checkbox>
@@ -56,16 +56,16 @@ limitations under the License.
           sortDirection="asc"
           [label]="t('gridArea')"
           [formControl]="form.controls.gridAreas"
-          [options]="gridAreaOptions$ | push"
+          [options]="gridAreaOptions()"
         >
-          @if (multipleGridAreasSelected$ | push) {
+          @if (multipleGridAreasSelected()) {
             <watt-field-hint>
               {{ t("gridAreaHint", { count: form.controls.gridAreas.value?.length }) }}
             </watt-field-hint>
           }
         </watt-dropdown>
 
-        @if (multipleGridAreasSelected$ | push) {
+        @if (multipleGridAreasSelected()) {
           <watt-checkbox [formControl]="form.controls.combineResultsInOneFile">
             {{ t("combineResultsInOneFile") }}
           </watt-checkbox>
@@ -76,13 +76,13 @@ limitations under the License.
         </watt-checkbox>
       </div>
 
-      @if ((showEnergySupplierDropdown$ | push) && form.controls.energySupplier) {
+      @if (showEnergySupplierDropdown() && form.controls.energySupplier) {
         <div class="items-group">
           <watt-dropdown
             [label]="t('energySupplier')"
             [showResetOption]="false"
             [formControl]="form.controls.energySupplier"
-            [options]="energySupplierOptions$ | push"
+            [options]="energySupplierOptions()"
           />
         </div>
       }
