abit more renaming

--- a/libs/dh/market-participant/feature-delegation/src/components/delegation-tab.component.html
+++ b/libs/dh/market-participant/feature-delegation/src/components/delegation-tab.component.html
@@ -60,6 +60,6 @@ limitations under the License.
       </watt-button>
     </vater-stack>
 
-    <dh-delegations-overview [delegationsByType]="delegationsByType()" />
+    <dh-delegations-by-type [delegationsByType]="delegationsByType()" />
   }
 </vater-flex>
