feat(dh): move upload measurements to actions menu

--- a/libs/watt/package/core/styles/_vater.scss
+++ b/libs/watt/package/core/styles/_vater.scss
@@ -261,4 +261,8 @@
   .vater-justify-space-evenly {
     justify-content: space-evenly;
   }
+
+  .vater-align-self-end {
+    align-self: flex-end;
+  }
 }
