--- a/libs/dh/market-participant/feature-market-participant/src/components/details/details.component.html
+++ b/libs/dh/market-participant/feature-market-participant/src/components/details/details.component.html
@@ -14,12 +14,19 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-@let selectedActor = actor();
+@let loadedMarketParticipant = marketParticipant();
 
-<ng-container *transloco="let t; read: 'marketParticipant.actorsOverview.drawer'">
-  <watt-drawer [loading]="isLoading()" #drawer (closed)="closed.emit()" [size]="drawerSize()">
+<ng-container *transloco="let t; prefix: 'marketParticipant.actorsOverview.drawer'">
+  <watt-drawer
+    autoOpen="true"
+    [key]="loadedMarketParticipant?.id"
+    [loading]="isLoading()"
+    #drawer
+    (closed)="closed.emit()"
+    [size]="drawerSize()"
+  >
     <watt-drawer-topbar>
-      <dh-market-participant-status-badge [status]="selectedActor?.status" />
+      <dh-market-participant-status-badge [status]="loadedMarketParticipant?.status" />
     </watt-drawer-topbar>
 
     @if (canEdit()) {
@@ -27,7 +34,7 @@ limitations under the License.
         <watt-button
           *dhPermissionRequired="['actor-master-data:manage']"
           variant="secondary"
-          (click)="editActor()"
+          (click)="editMarketParticipant()"
           >{{ t("edit") }}</watt-button
         >
       </watt-drawer-actions>
@@ -35,10 +42,10 @@ limitations under the License.
 
     <watt-drawer-heading>
       <h2 class="watt-space-stack-s">
-        @if (selectedActor?.glnOrEicNumber) {
-          {{ selectedActor?.glnOrEicNumber }} • {{ selectedActor?.name }}
+        @if (loadedMarketParticipant?.glnOrEicNumber) {
+          {{ loadedMarketParticipant?.glnOrEicNumber }} • {{ loadedMarketParticipant?.name }}
         } @else {
-          {{ selectedActor?.name }}
+          {{ loadedMarketParticipant?.name }}
         }
       </h2>
 
@@ -46,22 +53,24 @@ limitations under the License.
         <vater-stack direction="row" gap="s">
           <span class="watt-label">{{ t("metadata.marketRole") }}</span>
           <span>
-            @if (selectedActor?.marketRole) {
-              {{ "marketParticipant.marketRoles." + selectedActor?.marketRole | transloco }}
+            @if (loadedMarketParticipant?.marketRole) {
+              {{
+                "marketParticipant.marketRoles." + loadedMarketParticipant?.marketRole | transloco
+              }}
             } @else {
-              {{ selectedActor?.marketRole | dhEmDashFallback }}
+              {{ loadedMarketParticipant?.marketRole | dhEmDashFallback }}
             }
           </span>
         </vater-stack>
 
         <vater-stack direction="row" gap="s">
           <span class="watt-label">{{ t("metadata.organization") }}</span>
-          <span>{{ selectedActor?.organization?.name | dhEmDashFallback }}</span>
+          <span>{{ loadedMarketParticipant?.organization?.name | dhEmDashFallback }}</span>
         </vater-stack>
       </vater-stack>
     </watt-drawer-heading>
 
-    @if (drawer.isOpen() && selectedActor) {
+    @if (drawer.isOpen() && loadedMarketParticipant) {
       <watt-drawer-content>
         <watt-tabs>
           <watt-tab [label]="t('tabs.masterData.tabLabel')">
@@ -73,12 +82,12 @@ limitations under the License.
                 <watt-description-list variant="stack" [itemSeparators]="false">
                   <watt-description-list-item
                     [label]="t('tabs.masterData.glnOrEic')"
-                    [value]="selectedActor.glnOrEicNumber"
+                    [value]="loadedMarketParticipant.glnOrEicNumber"
                   />
 
                   <watt-description-list-item
                     [label]="t('tabs.masterData.name')"
-                    [value]="selectedActor.name"
+                    [value]="loadedMarketParticipant.name"
                   />
 
                   @if (isGridAccessProvider()) {
@@ -99,15 +108,15 @@ limitations under the License.
                   >/>
                   <watt-description-list-item
                     [label]="t('tabs.masterData.nameOrDepartment')"
-                    [value]="selectedActor.contact?.name"
+                    [value]="loadedMarketParticipant.contact?.name"
                   />
                   <watt-description-list-item
                     [label]="t('tabs.masterData.email')"
-                    [value]="selectedActor.contact?.email"
+                    [value]="loadedMarketParticipant.contact?.email"
                   />
                   <watt-description-list-item
                     [label]="t('tabs.masterData.phoneNumber')"
-                    [value]="selectedActor.contact?.phone"
+                    [value]="loadedMarketParticipant.contact?.phone"
                   />
                 </watt-description-list>
               </watt-card>
@@ -118,7 +127,7 @@ limitations under the License.
 
                     <watt-button
                       *dhPermissionRequired="['actors:manage']"
-                      (click)="editOrganization(selectedActor.organization.id)"
+                      (click)="editOrganization(loadedMarketParticipant.organization.id)"
                       variant="text"
                       >{{ t("tabs.masterData.editOrganization") }}</watt-button
                     >
@@ -128,19 +137,19 @@ limitations under the License.
                 <watt-description-list variant="stack" [itemSeparators]="false">
                   <watt-description-list-item
                     [label]="t('tabs.masterData.cvr')"
-                    [value]="selectedActor.organization.businessRegisterIdentifier"
+                    [value]="loadedMarketParticipant.organization.businessRegisterIdentifier"
                   />
                   <watt-description-list-item
                     [label]="t('tabs.masterData.organizationName')"
-                    [value]="selectedActor.organization.name"
+                    [value]="loadedMarketParticipant.organization.name"
                   />
                   <watt-description-list-item
                     [label]="t('tabs.masterData.organizationCountry')"
-                    [value]="selectedActor.organization.address.country"
+                    [value]="loadedMarketParticipant.organization.address.country"
                   />
                   <watt-description-list-item [label]="t('tabs.masterData.domains')">
                     <vater-stack wrap direction="row" gap="s">
-                      @for (domain of selectedActor.organization.domains; track domain) {
+                      @for (domain of loadedMarketParticipant.organization.domains; track domain) {
                         <watt-chip [readonly]="true">{{ domain }}</watt-chip>
                       }
                     </vater-stack>
@@ -155,16 +164,16 @@ limitations under the License.
               [label]="t('tabs.b2bAccess.tabLabel')"
               *dhPermissionRequired="['actor-credentials:manage']"
             >
-              <dh-b2b-access-tab [marketParticipantId]="selectedActor.id" />
+              <dh-b2b-access-tab [marketParticipantId]="loadedMarketParticipant.id" />
             </watt-tab>
 
             <ng-container *dhPermissionRequired="['delegation:view']">
               <watt-tab
                 [label]="t('tabs.delegation.tabLabel')"
-                *dhCanDelegateFor="selectedActor.marketRole"
+                *dhCanDelegateFor="loadedMarketParticipant.marketRole"
               >
                 @defer (on viewport) {
-                  <dh-delegation-tab [actor]="selectedActor" />
+                  <dh-delegation-tab [actor]="loadedMarketParticipant" />
                 } @placeholder {
                   <watt-spinner />
                 }
@@ -176,7 +185,9 @@ limitations under the License.
                 @if (showAdditionalRecipientsTab()) {
                   <watt-tab [label]="t('tabs.accessToMeasurements.tabLabel')">
                     @defer (on viewport) {
-                      <dh-access-to-measurements-tab [marketParticipant]="selectedActor" />
+                      <dh-access-to-measurements-tab
+                        [marketParticipant]="loadedMarketParticipant"
+                      />
                     } @placeholder {
                       <watt-spinner />
                     }
@@ -188,17 +199,21 @@ limitations under the License.
             <ng-container *dhPermissionRequired="['balance-responsibility:view']">
               @if (showBalanceResponsibleRelationTab()) {
                 <watt-tab [label]="t('tabs.balanceResponsibleRelation.tabLabel')">
-                  <dh-balance-responsible-relation-tab [marketParticipant]="selectedActor" />
+                  <dh-balance-responsible-relation-tab
+                    [marketParticipant]="loadedMarketParticipant"
+                  />
                 </watt-tab>
               }
             </ng-container>
           }
 
           <watt-tab [label]="t('tabs.history.tabLabel')" *dhPermissionRequired="['actors:manage']">
-            <dh-actor-audit-log-tab [actor]="selectedActor" />
+            <dh-actor-audit-log-tab [actor]="loadedMarketParticipant" />
           </watt-tab>
         </watt-tabs>
       </watt-drawer-content>
     }
   </watt-drawer>
 </ng-container>
+
+<router-outlet />
