--- a/libs/dh/market-participant/feature-market-participant/src/components/details/details.component.html
+++ b/libs/dh/market-participant/feature-market-participant/src/components/details/details.component.html
@@ -18,7 +18,7 @@ limitations under the License.
 
 <ng-container *transloco="let t; prefix: 'marketParticipant.actorsOverview.drawer'">
   <watt-drawer
-    autoOpen="true"
+    autoOpen
     [key]="loadedMarketParticipant?.id"
     [loading]="isLoading()"
     #drawer
