--- a/libs/dh/market-participant/feature-market-participant/src/components/edit.component.html
+++ b/libs/dh/market-participant/feature-market-participant/src/components/edit.component.html
@@ -16,7 +16,7 @@ limitations under the License.
 -->
 <watt-modal
   #modal
-  autoOpen="true"
+  autoOpen
   [loading]="isLoading()"
   [title]="name()"
   size="large"
