--- a/libs/dh/market-participant/feature-market-participant/src/components/market-participants.component.html
+++ b/libs/dh/market-participant/feature-market-participant/src/components/market-participants.component.html
@@ -17,7 +17,7 @@ limitations under the License.
 <watt-data-table
   vater
   inset="ml"
-  *transloco="let t; read: 'marketParticipant.actorsOverview'"
+  *transloco="let t; prefix: 'marketParticipant.actorsOverview'"
   [searchLabel]="'shared.search' | transloco"
   [error]="dataSource.error"
   [ready]="dataSource.called"
